# sprinkler

./: .gitignore  README.md  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactoring_proposal.md
sprinkler/: __init__.py  config.py  constants.py  decorator.py  operation.py  operations.py  prompt_template.py  utils.py
sprinkler/context/: __init__.py  base.py
sprinkler/pipeline/: __init__.py  base.py  group.py
sprinkler/runnable/: __init__.py  base.py  group.py  pipeline.py
sprinkler/runnable/task/: __init__.py  base.py  chat.py  prompt.py
sprinkler/task/: __init__.py  base.py  decorator.py
tests/: test_async.py  test_chat.py  test_complex_pipeline.py  test_decorator.py  test_group.py  test_pipeline.py  test_prompt.py  test_task.py
