[tool.poetry]
name = "sprinkler"
version = "0.1.0"
description = ""
authors = ["Kim, Jung Sik <wjddkel328@gmail.com>", "Yoo, Young Seok <richpinkr99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.4.2"
openai = "^0.28.0"
pygraphviz = { version = "^1.11", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[tool.poetry.extras]
viz = ["pygraphviz"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
